vlib/v/checker/tests/interface_instancing_err.vv
interface Speaker {
    name() string
    speak()
}

fn main() {
    s := Speaker{}
    eprintln('Speaker instance is: ${s}')

    a := []Speaker{}
    eprintln('Total speakers are: ${a.len}')
}
